kubernetes/ingress-nginx-controller/ingress-routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-routes
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 5m
spec:
  ingressClassName: nginx
  rules:
    - host: login.devplace.xyz
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: keycloak
              port:
                number: 8080

#    - host: login.qa.devplace.xyz
#      http:
#        paths:
#        - path: "/"
#          pathType: Prefix
#          backend:
#            service:
#              name: keycloak
#              port:
#                number: 8080
